All_Component_DX/force-app/main/default/objects/Field_Default_Rules__c/Field_Default_Rules__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Field Default Rules</description>
    <label>Field Default Rules</label>
</CustomObject>