All_Component_DX/force-app/main/default/objects/Field_Default_Rules__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>Source Type</description>
    <inlineHelpText>Source Type</inlineHelpText>
    <label>Source Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>