All_Component_DX/force-app/main/default/objects/Field_Default_Rules__c/fields/Target_Key__c.field-meta.xml
<CustomField>
    <fullName>Target_Key__c</fullName>
    <label>Target Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>