All_Component_DX/force-app/main/default/objects/Field_Default_Rules__c/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <description>Target Value</description>
    <inlineHelpText>Target Value</inlineHelpText>
    <label>Target Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>