All_Component_DX/force-app/main/default/objects/Field_Default_Rules__c/listViews/All_Values.listView-meta.xml
<ListView>
    <fullName>All_Values</fullName>
    <columns>NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>Source_Key__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Target_Key__c</columns>
    <columns>Target_Value__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Values</label>
    <language>en_US</language>
</ListView>